# Sandcastle

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.runner  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  SPEC.md  alembic.ini  build_docker_image.py  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  e2b.Dockerfile  e2b.toml  index.html  pyproject.toml  sandcastle.yaml.example
.github/: FUNDING.yml
.github/workflows/: pages.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_api_keys_and_dead_letter_queue.py  003_time_machine_budget_cancel.py  003_workflow_versions.py  004_schedule_tenant_id.py  005_approval_gates.py  006_autopilot_experiments.py  007_hierarchical_workflows.py  008_policy_engine.py  009_cost_latency_optimizer.py  010_settings.py  011_api_key_admin_role.py  012_workflow_versions.py
assets/: ApiKeysPage-SD9c293M.js  ApprovalsPage-DKHdCBiA.js  AutoPilotPage-Blol6OEn.js  ConfirmDialog-C81DFMuq.js  DeadLetterPage-CGQF_P84.js  EmptyState-BPInumdg.js  JsonEditor-DNOXJmHX.js  Onboarding-I-4xNMuS.js  OptimizerPage-BZBzWxdu.js  Overview-Br8L6PuG.js  RunComparePage-CGZsP8YC.js  RunDetailPage-DasNDpX0.js  RunStatusBadge-GjxONYBM.js  Runs-Bafy9RKs.js  Schedules-BC8tcGrG.js  SettingsPage-cMNQcu3t.js  StepNode-0-eridk3.js  TemplatesPage-nvg_kR8E.js  ViolationsPage-C90rBNT5.js  WorkflowBuilderPage-Bg5USMs5.js  WorkflowDetailPage-DbyE4zyI.js  Workflows-DUTfW4QX.js  arrow-left-iphM-U-v.js  arrow-right-CQB1yzDT.js  check-D_EyViqK.js  chevron-down-CYAWiLyf.js  chevron-up-DAN74lgC.js  circle-check-Bk-V9RBU.js  copy-DfDhqOyB.js  dollar-sign-CVTVnX7Q.js  download-CyEcOVDP.js  file-text-C_J2fgJl.js  git-compare-arrows-DX5FixfP.js  index-B2F0FkoB.css  index-BtCl_quS.js  index-BxoS6zFR.js  index-iCV9RHQg.js  play-CiRW9BCK.js  plus-CB_U-jcF.js  rocket-Dcc1osvH.js  (+4 more)
cf-sandbox-worker/: Dockerfile  package.json  wrangler.jsonc
cf-sandbox-worker/src/: index.ts
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  screenshots.mjs  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  mock.ts
dashboard/src/components/api-keys/: ApiKeyTable.tsx  CreateApiKeyModal.tsx  KeyRevealModal.tsx
dashboard/src/components/auth/: AuthGate.tsx
dashboard/src/components/dead-letter/: DeadLetterTable.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  NotificationCenter.tsx  Sidebar.tsx
dashboard/src/components/onboarding/: OnboardingWizard.tsx  StepConnectSandshore.tsx  StepConnectSandstorm.tsx  StepFirstWorkflow.tsx  StepRunTest.tsx
dashboard/src/components/overview/: CostChart.tsx  RecentRuns.tsx  RunsChart.tsx  StatsCards.tsx
dashboard/src/components/providers/: EventStreamProvider.tsx
dashboard/src/components/runs/: LiveStream.tsx  ReplayForkModal.tsx  RunStatusBadge.tsx  RunTree.tsx  RunsTable.tsx  StepCard.tsx  StepDiffCard.tsx  StepTimeline.tsx
dashboard/src/components/schedules/: CreateScheduleModal.tsx  CronBuilder.tsx  EditScheduleModal.tsx  ScheduleTable.tsx
dashboard/src/hooks/: useAuth.ts  useEventStream.ts  useEventStreamContext.ts  useKeyboardShortcuts.ts  useRuns.ts  useRuntimeInfo.ts  useSSE.ts  useTheme.ts  useToasts.ts
dashboard/src/lib/: constants.ts  cron.ts  utils.ts
dashboard/src/pages/: ApiKeysPage.tsx  ApprovalsPage.tsx  AutoPilotPage.tsx  DeadLetterPage.tsx  Onboarding.tsx  OptimizerPage.tsx  Overview.tsx  RunComparePage.tsx  RunDetailPage.tsx  Runs.tsx  Schedules.tsx  SettingsPage.tsx  TemplatesPage.tsx  ViolationsPage.tsx  WorkflowBuilderPage.tsx  WorkflowDetailPage.tsx  Workflows.tsx
scripts/: screenshots.mjs
site/: index.html
src/sandcastle/: __init__.py  __main__.py  config.py  main.py  mcp_server.py  sdk.py
src/sandcastle/api/: auth.py  rate_limit.py  routes.py  schemas.py
src/sandcastle/engine/: autopilot.py  backends.py  dag.py  events.py  executor.py  generator.py  optimizer.py  pdf.py  policy.py  providers.py  runner-openai.mjs  runner.mjs  sandbox.py  sandshore.py  storage.py
src/sandcastle/models/: db.py
src/sandcastle/queue/: scheduler.py  worker.py
src/sandcastle/templates/: __init__.py  ad_copy_generator.yaml  blog_to_social.yaml  chain_of_thought.yaml  competitor_analysis.yaml  contract_review.yaml  data_extractor.yaml  email_campaign.yaml  job_description.yaml  lead_enrichment.yaml  meeting_recap.yaml  pdf_summary.yaml  proposal_generator.yaml  release_notes.yaml  research_agent.yaml  resume_screener.yaml  review_and_approve.yaml  review_sentiment.yaml  seo_content.yaml  summarize.yaml  ticket_classifier.yaml  translate.yaml
src/sandcastle/webhooks/: dispatcher.py
tests/: conftest.py  test_api.py  test_approval.py  test_autopilot.py  test_backends.py  test_cli.py  test_dag.py  test_doctor.py  test_executor.py  test_failover.py  test_generator.py  test_hierarchical.py  test_local_mode.py  test_mcp.py  test_optimizer.py  test_performance.py  test_phase5.py  test_policy.py  test_providers.py  test_run_compare.py  test_sdk.py  test_settings.py  test_tenant_isolation.py  test_workflow_registry.py
workflows/: brand-reputation-scanner.yaml  competitive-intelligence-radar.yaml  competitor-monitor.yaml  content-atomizer.yaml  eu-presidents.yaml  incident-postmortem-generator.yaml  lead-enrichment-outreach.yaml  lead-enrichment.yaml  market-entry-analyzer.yaml  news-rewriter.yaml  parallel-file-processing.yaml  pdf-summary.yaml  seo-audit.yaml  talent-pipeline-builder.yaml  technical-debt-auditor.yaml  text-summarizer.yaml
(+25 files in other folders)
