[project]
name = "sandcastle-ai"
version = "0.5.0"
description = "Production-ready workflow orchestrator for AI agents. Define pipelines in YAML, run locally with zero config, scale to production."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Tomas Pflanzer", email = "tomas@gizmax.cz" },
]
keywords = ["ai", "agents", "workflow", "orchestrator", "sandstorm", "llm", "pipeline", "workflow-templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "arq>=0.26",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aioboto3>=13",
    "python-dotenv>=1.0",
    "simpleeval>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/gizmax/Sandcastle"
Repository = "https://github.com/gizmax/Sandcastle"
Documentation = "https://github.com/gizmax/Sandcastle#readme"
Issues = "https://github.com/gizmax/Sandcastle/issues"
Dashboard = "https://gizmax.github.io/Sandcastle/"

[project.scripts]
sandcastle = "sandcastle.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandcastle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
